# kyzel

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.sh  train.py
data/: c0.xml
data/sessions/: c0.xml  purpose_identification_20250125_211334.xml  src_explore_1_20250125_235152.xml  src_explore_2_20250126_000634.xml
data/sessions/staging/: gpu_20250125_202036.xml  listdir_20250125_210011.xml  purpose_identification_20250125_211334.xml  session_20250126_201050.xml  session_20250126_201927.xml  src_explore_1_20250125_235152.xml  sysid_autonomous_20250125_221338.xml
data/sessions/validated/: aws_s3_bucket_trouble.xml  malware_freeze.xml  news_20250126_201927.xml  s0.xml  s1.xml  s2.xml  sales_analysis.xml  session_20250126_201050.xml  src_explore_2_20250126_000634.xml  vpn_failure.xml
docs/: GLOSSARY.md
nb/: constrained_gen_demo.py  flatten_to_chatml.py  interactive.py  load_and_display_session.py  quantize.py  run_code.py  train.py  xml_to_dataset.py
run/phi4/lora/: README.md  adapter_config.json  adapter_model.safetensors  merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
src/: __init__.py
src/chatml/: __init__.py  print.py  types.py
src/display/text/: chatml.py  (+1 more)
src/generate/: __init__.py  llm.py
src/postproc/: __init__.py
src/preproc/: __init__.py
src/prompts/: __init__.py
src/run/: __init__.py  execute.py  format.py
src/server/: __main__.py  cli.py
src/session/: __init__.py  parse.py  types.py
src/train/: to_dataset.py  utils.py
src/types/: __init__.py  chatml.py  events.py  session.py
(+19 files in other folders)
